--- a/Frontend/stylesheet.css
+++ b/Frontend/stylesheet.css
@@ -194,3 +194,20 @@ form::before {
     font-size: 1.7rem;
   }
 }
+
+
+#goboard {
+  width: 100%;
+  max-width: 500px;
+  background: #DEB887;
+  display: block;
+}
+
+#goboard line {
+  stroke: black;
+  stroke-width: 0.05;
+}
+
+#goboard circle {
+  pointer-events: none;
+}
